adding adsense script to head

--- a/public/index.html
+++ b/public/index.html
@@ -12,36 +12,88 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Okcerk's - Cartoons and comics by Andres Marc</title>
-    <meta name="viewport" content="width=700">
-    <meta name="description" content="Cartoons, comics and random animated stuff by Andres Marc.">
-    <meta name="keywords" content="cartoon,cartoons,animation,animations,2d,drawing,drawings,sketches,comics,comic,random,randomness,bitcoin,blockchain">
-  
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    
+    <meta name="viewport" content="width=700" />
+    <meta
+      name="description"
+      content="Cartoons, comics and random animated stuff by Andres Marc."
+    />
+    <meta
+      name="keywords"
+      content="cartoon,cartoons,animation,animations,2d,drawing,drawings,sketches,comics,comic,random,randomness,bitcoin,blockchain"
+    />
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+
     <!-- favicon generics -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-32.png" sizes="32x32">
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-57.png" sizes="57x57">
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-76.png" sizes="76x76">
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-96.png" sizes="96x96">
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-128.png" sizes="128x128">
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-192.png" sizes="192x192">
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-228.png" sizes="228x228">
-  
+    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-32.png" sizes="32x32" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-57.png" sizes="57x57" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-76.png" sizes="76x76" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-96.png" sizes="96x96" />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/favicon/favicon-128.png"
+      sizes="128x128"
+    />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/favicon/favicon-192.png"
+      sizes="192x192"
+    />
+    <link
+      rel="icon"
+      href="%PUBLIC_URL%/favicon/favicon-228.png"
+      sizes="228x228"
+    />
+
     <!-- favicon Android -->
-    <link rel="shortcut icon" sizes="196x196" href="%PUBLIC_URL%/favicon/favicon-196.png">
-  
+    <link
+      rel="shortcut icon"
+      sizes="196x196"
+      href="%PUBLIC_URL%/favicon/favicon-196.png"
+    />
+
     <!-- favicon iOS -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/favicon-120.png" sizes="120x120">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/favicon-152.png" sizes="152x152">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon/favicon-180.png" sizes="180x180">
-  
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/favicon/favicon-120.png"
+      sizes="120x120"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/favicon/favicon-152.png"
+      sizes="152x152"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/favicon/favicon-180.png"
+      sizes="180x180"
+    />
+
     <!-- favicon Windows 8 IE 10-->
-    <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/favicon/favicon-144.png">
-  
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta
+      name="msapplication-TileImage"
+      content="%PUBLIC_URL%/favicon/favicon-144.png"
+    />
+
     <!-- favicon Windows 8.1 + IE11 and above-->
-    <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml" />
+    <meta
+      name="msapplication-config"
+      content="%PUBLIC_URL%/browserconfig.xml"
+    />
+
+    <!-- adsense-->
+    <script
+      data-ad-client="ca-pub-8082553927690553"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
