--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Okcerk's - Cartoons and comics by Andres Marc</title>
+    <title>Okcerk.com - Cartoons and comics by Andres Marc</title>
     <meta name="viewport" content="width=700" />
     <meta
       name="description"
