--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     -->
     <title>Okcerk.com - Cartoons and comics by Andres Marc</title>
     <meta name="viewport" content="width=700" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
       content="Cartoons, comics and random animated stuff by Andres Marc."
