small seo improvements

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
-      content="Cartoons, comics and random animated stuff by Andres Marc."
+      content="Cartoons, comics and random animated stuff by Andres Marc. Ink and Digital art works, comic strips, Escuadron 37 animated series and much more! "
     />
     <meta
       name="keywords"
-      content="cartoon,cartoons,animation,animations,2d,drawing,drawings,sketches,comics,comic,random,randomness,bitcoin,blockchain"
+      content="cartoon,cartoons,animation,animations,2d,drawing,drawings,sketches,comics,comic,random,randomness,doodle,doodles,adobe,animate,flash,argentina,escuadron 37,squad 37,okcerk,ockerk,ockerc,andres marc,digital art,ink art,artwork"
     />
 
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
