--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Okcerk.com - Cartoons and comics by Andres Marc</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=700" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="description"
