--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans&display=swap" rel="stylesheet" />
 
     <!-- favicon generics -->
     <link rel="icon" href="%PUBLIC_URL%/favicon/favicon-32.png" sizes="32x32" />
